# big2

./: .clang-format  .clangd  CMakeLists.txt  README.md  todos.md
src/: big2.c  big2.h  clay.h  server.c
src/clients/: cli.c  gui.c  shared.c  shared.h
src/utils/: arena.c  arena.h  array.h  pcg_basic.c  pcg_basic.h
